--- a/config/database.yml
+++ b/config/database.yml
@@ -1,8 +1,9 @@
-# SQLite. Versions 3.8.0 and up are supported.
+# -# SQLite. Versions 3.8.0 and up are supported.
 #   gem install sqlite3
 #
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
+# SQLite. Versions 3.8.0 and up are supported.  #   gem install sqlite3 # #   Ensure the SQLite 3 gem is defined in your Gemfile #   gem 'sqlite3'
 #
 default: &default
   adapter: sqlite3
@@ -12,11 +13,12 @@ default: &default
 development:
   adapter: mysql2
   encoding: utf8
-  database: rails_tutorial
+  database: naryshiki_sql
   pool: 5
   username: root
   password:
-    host: localhost
+  host: localhost
+
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
