--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.9.0",
     "react_ujs": "^2.6.0",
+    "serialize-javascript": "^2.1.2",
     "trix": "^1.0.0",
     "turbolinks": "^5.2.0"
   },
